# Model-Rocket-Flight-Computer

./: .gitignore  AGENTS.md  Cargo.toml  Embed.toml  Model Rocket Flight Computer.ioc  README.md  task.md
code/: .gitignore  Cargo.toml  README.md
code/cross-esp32-s3/: Cargo.toml
code/cross-esp32-s3/board/: Cargo.toml
code/cross-esp32-s3/board/src/: lib.rs
code/cross-esp32-s3/bringup/: Cargo.toml
code/cross-esp32-s3/bringup/src/: io_mapping.rs  main.rs  postcard_server.rs
code/cross-esp32-s3/flight-computer/: Cargo.toml
code/cross-esp32-s3/flight-computer/src/: main.rs  postcard_server.rs
code/cross-esp32-s3/self-test/: Cargo.toml
code/cross-esp32-s3/self-test/src/: lib.rs  test_board.rs
code/cross-nucleo-f413zh/: Cargo.toml
code/cross-nucleo-f413zh/.cargo/: config.toml
code/cross-nucleo-f413zh/.zed/: settings.json
code/cross-nucleo-f413zh/bringup/: Cargo.toml  Model Rocket Flight Computer.ioc
code/cross-nucleo-f413zh/bringup/src/: io_mapping.rs  main.rs
code/flight-computer/: Cargo.toml  README.md
code/flight-computer-host/: Cargo.toml  README.md  spec.md
code/flight-computer-host/src/: config.rs  dispatch.rs  logging.rs  main.rs
code/flight-computer-lib/: Cargo.toml
code/flight-computer-lib/src/: config.rs  lib.rs  tasks.rs
code/flight-computer-lib/src/config/: apogee_detector.rs  log_filesystem.rs  tasks.rs  touchdown_detector.rs
code/flight-computer-lib/src/core/: finite_state_machine.rs  state_machine.rs
code/flight-computer-lib/src/device/: bmp280.rs  bno055.rs  gps.rs  mod.rs  sd_card.rs  sensor.rs
code/flight-computer-lib/src/embedded_hal_device/: deployment_switch.rs  mod.rs  sd_card.rs
code/flight-computer-lib/src/events/: filesystem.rs
code/flight-computer-lib/src/impls/: deployment_switch.rs  sd_card.rs
code/flight-computer-lib/src/interfaces/: mod.rs  sensor_device.rs
code/flight-computer-lib/src/model/: altimeter.rs  deployment_system.rs  filesystem.rs  finite_state_machine.rs  mod.rs  sensor_device.rs  system_status.rs
code/flight-computer-lib/src/services/: altimeter.rs  log_filesystem.rs  mod.rs  trace.rs
code/flight-computer-lib/src/tasks/: altimeter.rs  arm_button.rs  bmp280.rs  bno055.rs  finite_state_machine.rs  gps.rs  imu.rs  mod.rs  postcard.rs  sd_card.rs  system_status.rs
code/flight-computer-lib/tests/: finite_state_machine.rs
code/flight-computer-lib/tests/simulation/: flight_trajectory.csv
code/flight-computer/src/: config.rs  lib.rs  log.rs  sync.rs  tasks.rs
code/flight-computer/src/config/: apogee_detector.rs  data_acquisition.rs  log_filesystem.rs  touchdown_detector.rs
code/flight-computer/src/core/: mod.rs  state_machine.rs  storage.rs  trace.rs
code/flight-computer/src/events/: filesystem.rs
code/flight-computer/src/interfaces/: arming_system.rs  deployment_system.rs  filesystem.rs  led.rs  mod.rs  sensor.rs  sensor_device.rs
code/flight-computer/src/tasks/: altimeter.rs  finite_state_machine.rs  gps.rs  groundstation.rs  imu.rs  mod.rs  postcard.rs  sd_card.rs  sensor.rs  simulation.rs  storage.rs
code/flight-computer/src/test_utils/: mod.rs  sensor_data.rs
code/ground-station-backend/: Cargo.toml  README.md  Rocket.toml  board.rs
code/ground-station-backend/src/: api.rs  config.rs  fc_client.rs  lib.rs  logging.rs  main.rs  postcard_client.rs  routes.rs  storage.rs
code/ground-station-backend/tests/: logging.rs
code/ground-station-frontend/: Cargo.toml  README.md  spec.md
code/ground-station-frontend/src/: backend.rs  config.rs  history.rs  lib.rs  state.rs
code/host-flight-computer/: .gitignore  Cargo.toml
code/host-flight-computer/src/: board.rs  logging.rs  main.rs  simulator.rs  simulator_ui.rs
code/host-flight-computer/src/sim_devices/: altimeter.rs  gps.rs  imu.rs  mod.rs  postcard_server.rs
code/host-flight-computer/src/simulator/: altimeter.rs  arm_button.rs  deployment_system.rs  gps.rs  imu.rs  physics.rs  scripted_events.rs  sd_card.rs
code/host-target-esp32s3-tests/: Cargo.toml
code/host-target-esp32s3-tests/tests/: ping.rs  subscription_altimeter.rs  subscription_gps.rs  subscription_imu.rs
code/proto/: Cargo.toml  README.md
code/proto/src/: actuator_data.rs  client.rs  error.rs  event.rs  flight_state.rs  ipc_adapter.rs  lib.rs  log_data_type.rs  record.rs  sensor_data.rs  wire.rs
code/proto/src/newtypes/: fix_type.rs  naive_time.rs  ping.rs
code/proto/src/record/: tick_hz.rs  uid.rs
code/proto/src/transport/: ipc.rs  mod.rs  thread.rs
code/simulator/: .gitignore  Cargo.toml  README.md  spec.md
code/simulator/src/: board.rs  config.rs  connect.rs  flight_computer.rs  lib.rs  logging.rs  main.rs  scripted.rs  sim_filesystem.rs  sim_sd_card.rs  simulator.rs  types.rs
code/simulator/src/api/: mod.rs
code/simulator/src/physics/: engine.rs  events.rs  mod.rs  state.rs
code/simulator/src/runtime/: commands.rs  mod.rs  orchestrator.rs
code/simulator/src/scripted_scenario/: mod.rs
code/simulator/src/simulator/: physics.rs  scripted_events.rs
code/simulator/src/tui/: actuators.rs  logs.rs  mod.rs  render.rs
code/telemetry-messages/: Cargo.toml
code/telemetry-messages/src/: lib.rs  log_data_type.rs  wrapper_types.rs
code/telemetry-messages/src/newtypes/: fix_type.rs  mod.rs  ping.rs
code/telemetry-messages/src/wrapper_types/: fix_type.rs  (+2 more)
code/utils/: Cargo.toml
code/utils/src/: constants.rs  lib.rs  logging.rs  status.rs  workspace.rs
code/xtask/: Cargo.toml
code/xtask/src/: check.rs  host.rs  main.rs
crates/groundstation_backend/: Cargo.toml
crates/groundstation_backend/src/: lib.rs  postcard_client.rs
crates/telemetry_messages/: Cargo.toml
crates/telemetry_messages/src/: lib.rs
groundstation/: Cargo.toml
groundstation/.cargo/: config.toml
groundstation/src/: defmt_parser.rs  gui.rs  lib.rs  main.rs  parser.rs
groundstation/src/defmt_parser/: elf_watcher.rs  log_message.rs
groundstation/src/gui/: config.rs  graphs.rs  terminal.rs
groundstation/src/parser/: elf_watcher.rs  log_message.rs  source.rs
telemetry_messages/: Cargo.toml
telemetry_messages/src/: altimeter_message.rs  lib.rs
(+176 files in other folders)
