[workspace]
members = [
    "flight_computer_lib",
    "flight_computer_nucleo_f413zh",
    "groundstation",
    "telemetry",
]

default-members = [
    "flight_computer_lib",
    "groundstation",
    "telemetry",
]

resolver = "3"

# [patch.crates-io]
# embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
# embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }

[profile.dev]
debug = true
lto = true
overflow-checks = true
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "s"
incremental = true
