[workspace]
members = [
    "crates/*",
]

default-members = [
    "crates/flight_computer",
    "crates/groundstation_backend",
    "crates/groundstation_frontend",
    "crates/telemetry_messages",
]

resolver = "3"

# [patch.crates-io]
# embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
# embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }

[profile.dev]
debug = true
lto = true
opt-level = "s"
overflow-checks = true
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "s"
overflow-checks = true
incremental = true
