[workspace]
members = [
    "crates/*",
]

default-members = [
    "crates/telemetry_messages",
]

resolver = "3"

[patch.crates-io]
postcard-rpc = { path = "../postcard-rpc/source/postcard-rpc" }
postcard-schema = { path = "../postcard/source/postcard-schema" }
# embassy-stm32 ={ git = "https://github.com/embassy-rs/embassy.git"}
# embassy-time ={ git = "https://github.com/embassy-rs/embassy.git"}
# embassy-time-driver ={ git = "https://github.com/embassy-rs/embassy.git"}

[profile.dev]
debug = true
lto = true
opt-level = "s"
overflow-checks = true
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "s"
overflow-checks = true
incremental = true
