[workspace]
members = [
    "host-flight-computer",
    "host-target-esp32s3-tests",
    "telemetry-messages",
    "flight-computer-lib",
    "ground-station-backend",
    "xtask",
]

resolver = "2"

[patch.crates-io]
postcard-rpc     = { path = "../../postcard-rpc/source/postcard-rpc", version = "*" }
postcard-schema  = { path = "../../postcard/source/postcard-schema", version = "*" }
bmp280-ehal  = { path = "../../bmp280", version = "*" }
switch-hal  = { path = "../../switch-hal", version = "*" }

[profile.dev]
debug = true
lto = true
opt-level = "s"
overflow-checks = true
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "s"
overflow-checks = true
incremental = true
