[workspace]
members = [
    "flight-computer",
    "flight-computer-host",
    "ground-station-backend",
    "ground-station-frontend",
    "proto",
    "simulator",
    "utils",
    "xtask",
]

resolver = "2"

[patch.crates-io]
postcard-rpc     = { path = "C:/Users/Pipes/Repos/postcard-rpc/source/postcard-rpc", version = "*" }
postcard-schema  = { path = "C:/Users/Pipes/Repos/postcard/source/postcard-schema", version = "*" }
bmp280-ehal  = { path = "C:/Users/Pipes/Repos/bmp280", version = "*" }
switch-hal  = { path = "C:/Users/Pipes/Repos/switch-hal", version = "*" }

[profile.dev]
debug = true
lto = true
opt-level = "s"
overflow-checks = true
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "s"
overflow-checks = true
incremental = true
