[package]
name = "groundstation"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive", "env"] }
defmt-decoder = { version = "=0.4.0" }
defmt-parser = "0.4.1"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
notify = "8"
tokio = { version = "1.38", features = ["full"] }
tokio-serial = "5.4"

eframe = "0.31"         # Main UI framework (built on egui)
egui = "0.31"           # UI framework for rendering widgets
egui_plot = "0.31"      # For real-time plots
egui_extras = { version = "0.31", features = ["default", "image"] }
