[package]
name = "groundstation"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "groundstation"
path = "src/bin/main.rs"

[[bin]]
name = "mock"
path = "src/bin/mock.rs"

[dependencies]
telemetry = { version = "*", path = "../telemetry" }

anyhow = "1"
clap = { version = "4.0", features = ["derive", "env"] }
defmt-decoder = { version = "=0.4.0" }
defmt-parser = "0.4.1"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
notify = "8"
tokio = { version = "1.38", features = ["full"] }
tokio-serial = "5.4"
circular-buffer = "1.1.0"
time = { version = "0.3", default-features = false, features = [
    "alloc",
    "formatting",
    "large-dates",
    "macros",
] }
chrono = { version = "^0.4", default-features = false}
nmea = { version = "0.7.0", default-features = false }
nalgebra = "0.33"  # Or the latest version

eframe = "0.31"         # Main UI framework (built on egui)
egui = "0.31"           # UI framework for rendering widgets
egui_plot = "0.31"      # For real-time plots
egui_extras = { version = "0.31", features = ["default", "image"] }
plotters-backend = "0.3"
plotters = "0.3"
egui-plotter = "0.4.0"
