[package]
name = "ground-station-backend"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "ground-station-backend"
path = "src/main.rs"

[dependencies]
proto = { version = "*", path = "../proto", default-features = false, features = ["client", "transport-ipc"] }

rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
postcard-rpc = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2"
tracing-log = "0.2"