[package]
name = "proto"
version = "0.0.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[dependencies]
nmea = { version = "0.7.0", default-features = false, features = ["GGA", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
uom = { version = "0.37.0", default-features = false, features = ["f32", "si", "serde"] }
nalgebra = { version = "0.33.2", default-features = false, features = ["serde-serialize-no-std"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
derive_more = { version = "2", default-features = false, features = ["from", "into", "deref", "display"] }
embassy-time = { version = "0.4", optional = true }

# postcard-schema = { version = "0.2", features = ["derive", "nalgebra-v0_33", "chrono-v0_4"] }
postcard-schema = { version = "0.2", features = ["derive", "nalgebra-v0_33", "chrono-v0_4", "uom-v0_37"] }
postcard-rpc = "0.11"

defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
defmt-or-log = { version = "0.2.2", optional = true }
defmt-or-log-macros = "0.1.2"

# ipc-adapter dependencies (host-only: tokio + interprocess over postcard-rpc).
# Keep optional — incompatible with no_std / embedded targets.
interprocess = { version = "2.4.2", optional = true, default-features = false, features = ["tokio"] }
tokio = { version = "1", optional = true, default-features = false, features = ["net", "io-util", "sync"] }
postcard = { version = "1", optional = true, default-features = false, features = ["use-std"] }

[features]

default = ["client"]

log = [
    "dep:log",
    "defmt-or-log/log",
]
defmt = [
    "dep:defmt",
    "defmt-or-log/defmt",
    "nmea/defmt-03",
    "postcard-schema/defmt-v0_3",
    "postcard-rpc/defmt",
]

embassy-time = ["dep:embassy-time"]
timestamp-into-duration = []

# Sim-only Topics/Endpoints
# Used by: simulator, FC host, PIL firmware.
# Not compiled in HW firmware.
simulator-endpoints = []

# Interprocess transport adapter (InterprocessWireTx / InterprocessWireRx).
# Brings tokio + interprocess — incompatible with no_std targets.
# Used by: FC host binary, GS backend, simulator.
ipc-adapter = ["dep:interprocess", "dep:tokio", "dep:postcard", "postcard-rpc/use-std"]

# Convenience alias: everything a HOST binary needs.
host = ["simulator-endpoints", "ipc-adapter", "log", "embassy-time", "timestamp-into-duration"]

# Convenience alias: what PIL firmware needs (sim endpoints over USB).
pil = ["simulator-endpoints", "defmt", "embassy-time", "timestamp-into-duration"]

# Convenience alias: what HW firmware needs (no sim, no IPC).
hw = ["defmt", "embassy-time"]

# Convenience alias: what non-flight-computer software needs (e.g. GS backend, simulator).
client = ["simulator-endpoints", "ipc-adapter", "timestamp-into-duration"]
