[package]
name = "proto"
version = "0.0.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[dependencies]
nmea = { version = "0.7.0", default-features = false, features = ["GGA", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
uom = { version = "0.37.0", default-features = false, features = ["f32", "si", "serde"] }
nalgebra = { version = "0.33.2", default-features = false, features = ["serde-serialize-no-std"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
derive_more = { version = "2", default-features = false, features = ["from", "into", "deref", "display"] }
thiserror = { version = "2", default-features = false }
embassy-time = { version = "0.4", optional = true }

# postcard-schema = { version = "0.2", features = ["derive", "nalgebra-v0_33", "chrono-v0_4"] }
postcard-schema = { version = "0.2", features = ["derive", "nalgebra-v0_33", "chrono-v0_4", "uom-v0_37"] }
postcard-rpc = "0.11"

defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
defmt-or-log = { version = "0.2.2", optional = true }
defmt-or-log-macros = "0.1.2"

# transport-ipc deps (host-only: tokio + interprocess over postcard-rpc).
interprocess = { version = "2.4.2", optional = true, default-features = false, features = ["tokio"] }
# transport-ipc + transport-thread deps (host-only, tokio-based transports).
tokio = { version = "1", optional = true, default-features = false, features = ["net", "io-util", "sync", "rt"] }
postcard = { version = "1", optional = true, default-features = false, features = ["use-std"] }

[features]

default = ["client"]

log = [
    "dep:log",
    "defmt-or-log/log",
]
defmt = [
    "dep:defmt",
    "defmt-or-log/defmt",
    "nmea/defmt-03",
    "postcard-schema/defmt-v0_3",
    "postcard-rpc/defmt",
]

# This crate is embedded-specific
embassy-time = ["dep:embassy-time"]
timestamp-into-duration = []

# Sim-only Topics/Endpoints
# Used by: simulator, FC host, PIL firmware.
# Not compiled in HW firmware.
simulator-endpoints = []

# Interprocess transport adapter (InterprocessWireTx / InterprocessWireRx).
# Inter-process communication (tokio + interprocess sockets) — incompatible with no_std targets.
# Client-side wire halves and connect helpers are additionally gated on `client`.
transport-ipc = ["dep:interprocess", "dep:tokio", "dep:postcard", "postcard-rpc/use-std"]

# In-process channel transport (tokio mpsc channels) — incompatible with no_std targets.
# `create_pair` is additionally gated on `client` (returns `PostcardClient`).
transport-thread = ["dep:tokio", "dep:postcard", "postcard-rpc/use-std", "postcard-rpc/test-utils"]

# Convenience alias: everything a HOST binary needs.
host = ["simulator-endpoints", "transport-ipc", "log", "timestamp-into-duration"]

# Convenience alias: what PIL firmware needs (sim endpoints over USB).
pil = ["simulator-endpoints", "defmt", "embassy-time", "timestamp-into-duration"]

# Convenience alias: what HW firmware needs (no sim, no IPC).
hw = ["defmt", "embassy-time"]

# Non-transport client utilities (PostcardClient, PostcardError).
# Consumer must also enable the transport feature they use (transport-ipc, transport-thread, etc.).
client = ["simulator-endpoints", "timestamp-into-duration", "postcard-rpc/use-std"]
