[package]
name = "simulator"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
proto = { version = "*", path = "../proto" }
flight-computer = { version = "*", path = "../flight-computer", default-features = false, features = ["log", "impl_software"] }

log = { version = "*" }
chrono = "0.4.42"
tokio = { version = "=1.49", features = ["time", "sync", "macros", "rt"] }
