[package]
name = "simulator"
version = "0.0.0"
publish = false
edition = "2024"

[[bin]]
name = "host"
path = "src/bin/host.rs"

[[bin]]
name = "pil"
path = "src/bin/pil.rs"

[lib]
name = "simulator"
path = "src/lib.rs"

[dependencies]
proto = { version = "*", path = "../proto", default-features = false, features = ["client", "transport-ipc"] }
utils = { path = "../utils" }

postcard-rpc = { version = "0.11", features = ["use-std"] }
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", default-features = false }

tokio = { version = "=1.49", features = ["rt-multi-thread", "time", "sync", "macros", "signal"] }
tokio-util = { version = "0.7" }
interprocess = { version = "2.4.2", default-features = false, features = ["tokio"] }

tracing = "0.1"
chrono = "0.4"

ratatui = "0.29"
crossterm = "0.28"
scopeguard = "1"

anyhow = "1"
derive_more = { version = "2", default-features = false, features = ["display"] }
arc-swap = "1"
