[package]
name = "telemetry-messages"
version = "0.0.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[dependencies]
nmea = { version = "0.7.0", default-features = false, features = ["GGA", "serde"] }
serde ={ version = "1.0", default-features = false, features = ["derive"] }
uom = { version = "0.37.0", default-features = false, features = ["f32", "si", "serde"] }
nalgebra = { version = "0.33.2", default-features = false, features = ["serde-serialize-no-std"] }
defmt = { version = "1.0" }

# postcard-schema = { version = "0.2", features = ["derive", "nalgebra-v0_33", "chrono-v0_4"] }
postcard-schema = { version = "0.2", features = ["derive", "nalgebra-v0_33", "chrono-v0_4", "uom-v0_37"] }
postcard-rpc = "0.11"
