[package]
name = "utils"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
proto = { path = "../proto", default-features = false }
serde = { version = "1", features = ["derive"] }

tracing = "0.1"
tracing-log = "0.2"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
