[package]
name = "telemetry_messages"
version = "0.0.0"
edition = "2024"

[dependencies]
chrono = { version = "^0.4", default-features = false, features = ["serde"] }
nmea = { version = "0.7.0", default-features = false, features = ["GGA", "RMC", "serde"] }
serde ={ version = "1.0", default-features = false, features = ["derive"] }
defmt = { version = "1.0", optional = true }

[features]
## Enable the `std` (standard library) usage
std = ["chrono/std"]
