[package]
name = "telemetry_messages"
version = "0.0.0"
edition = "2024"

[dependencies]
chrono = { version = "^0.4", default-features = false, features = ["serde"] }
nmea = { version = "0.7.0", default-features = false, features = ["GGA", "RMC", "serde"] }
serde ={ version = "1.0", default-features = false, features = ["derive"] }
uom = { version = "0.37.0", default-features = false, features = ["f32", "f64", "si", "serde"] }
nalgebra = { version = "0.33.2", default-features = false, features = ["serde-serialize-no-std"] }
