[package]
name = "telemetry_messages"
version = "0.0.0"
edition = "2024"

[dependencies]
chrono = { version = "^0.4", default-features = false, features = ["serde"] }
nmea = { version = "0.7.0", default-features = false, features = ["GGA", "RMC", "serde"] }
serde ={ version = "1.0", default-features = false, features = ["derive"] }
uom = { version = "0.37.0", default-features = false, features = ["f32", "f64", "si", "serde"] }
nalgebra = { version = "0.33.2", default-features = false, features = ["serde-serialize-no-std"] }

# postcard-schema = { version = "0.2", features = ["derive", "nalgebra-v0_33", "chrono-v0_4"] }
postcard-schema = { path = "../../../postcard/source/postcard-schema", version = "0.2", features = ["derive", "nalgebra-v0_33", "chrono-v0_4", "uom-v0_37"] }
postcard-rpc = { path = "../../../postcard-rpc/source/postcard-rpc", version = "0.11" }
