[package]
edition      = "2024"
name         = "flight_computer"
version      = "0.0.0"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"

[dependencies]
telemetry-messages = { version = "*" }
flight-computer-lib = { version = "*", default-features = false, features = ["defmt"] }
chrono = { version = "^0.4", default-features = false}

embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-20480"] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["defmt"] }
embassy-usb = { version = "0.4.0" }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-backtrace = { version = "0.17.0", features = ["defmt", "esp32s3", "exception-handler", "panic-handler", "halt-cores"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32s3"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["defmt", "esp32s3", "unstable"] }
esp-println = { version = "0.15.0", features = ["defmt-espflash", "esp32s3"] }

embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-bus = { version = "0.3", features = ["async", "defmt-03"] }
embedded-io = { version = "0.6.0", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = "0.3.1"
embedded-sdmmc = { version = "0.9.0", default-features = false, features = ["defmt-log"] }


# Drivers
bmp280-ehal = "0.0.6"
bno055 = "0.4.0"
nmea = { version = "0.7.0", default-features = false, features = ["GGA"] }

postcard ={ version = "1.1" }
postcard-rpc = { version = "0.11", features = ["embassy-usb-0_4-server"] }
postcard-schema = { version = "0.2", features = ["derive", "nalgebra-v0_33", "chrono-v0_4", "uom-v0_37"] }
uom = { version = "0.37.0", default-features = false, features = ["f32", "f64", "si", "serde"] }
esp-hal-smartled = { version = "0.15", features = ["defmt", "esp32s3"] }
smart-leds = "0.4"

critical-section = "1.2.0"
static_cell = "2.1.1"


[[bin]]
name = "flight_computer"
path = "src/main.rs"

# [profile.dev]
# # Rust debug is too slow.
# # For debug builds always builds with some optimization
# opt-level = "s"

# [profile.release]
# codegen-units    = 1     # LLVM can perform better optimizations using a single thread
# debug            = 2
# debug-assertions = false
# incremental      = false
# lto              = 'fat'
# opt-level        = 's'
# overflow-checks  = false
